kubernetes/apps/media/recyclarr/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: recyclarr
    egress:
      - toFQDNs:
          - matchName: github.com
        toPorts:
          - ports:
              - port: "443"
